@@ -27,6 +27,12 @@ ks_run_script () {
 	echo
 }
 
+ks_write_script () {
+	echo "Would write executable script $1:"
+	cat
+	echo
+}
+
 RET=0
 (kickseed "$1") || RET=$?
 
